--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuizMaster - Test Your Knowledge</title>
+    <title>Test your Billions knowledge</title>
     <style>
         * {
             margin: 0;
@@ -310,14 +310,14 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="logo">🧠 QuizMaster</div>
+            <div class="logo">🧠 Billions quiz</div>
             <div class="subtitle">Test Your Knowledge</div>
         </div>
 
         <!-- Start Screen -->
         <div id="start-screen" class="quiz-section active start-screen">
-            <h2>Welcome to QuizMaster!</h2>
-            <p>Test your knowledge with our interactive quiz. You'll get immediate feedback on each question and see your final score at the end.</p>
+            <h2>Welcome to My first quiz model </h2>
+            <p>Test your knowledge and You'll get immediate feedback on each question and see your final score at the end.</p>
             <div class="buttons">
                 <button class="btn" onclick="startQuiz()">Start Quiz</button>
             </div>
