--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             let message = '';
             if (percentage >= 80) {
                 scoreCircle.className = 'score-circle excellent';
-                message = '🏆 Excellent! You\'re a quiz master!';
+                message = '🏆 Excellent! You\'re a true Billionare!';
             } else if (percentage >= 60) {
                 scoreCircle.className = 'score-circle good';
                 message = '👏 Good job! You did well!';
